# balena-multiDocker

./: .gitignore  README.md  app.py  docker-compose.yml  hello.py
.github/workflows/: docker-build.yml
c-demo/: Dockerfile  Makefile  main.c  test.sh
express-demo/: Dockerfile  server.js
instrument-control/: Dockerfile  README.md  app.py  requirements.txt
instrument-control/static/: index.html
python-flask-demo/: Dockerfile  app.py
react-demo/: Dockerfile  README.txt  server.js  services.json
scpi-cpp-instrument-demo/: CMakeLists.txt
scpi-cpp-instrument-demo/core/include/: ScpiClient.hpp
scpi-cpp-instrument-demo/core/src/: ScpiClient.cpp
scpi-cpp-instrument-demo/scripts/: build.sh
scpi-cpp-instrument-demo/transport/include/: ITransport.hpp  TcpTransport.hpp
scpi-cpp-instrument-demo/transport/src/: TcpTransport.cpp
scpi-cpp-instrument-demo/ui/: main.cpp
scpi-sim/: Dockerfile
